# University-Stuff

./: BinaryOperator.cpp  CMakeLists.txt  Command.h  Condition.cpp  Condition.h  ConnectClientCommand.cpp  ConnectClientCommand.h  DefineVarCommand.cpp  DefineVarCommand.h  DefineVarEqCommand.cpp  DefineVarEqCommand.h  DefineVarLeftCommand.cpp  DefineVarLeftCommand.h  DefineVarRightCommand.cpp  DefineVarRightCommand.h  DefinrVarCommand.cpp  Expression.h  IfCommand.cpp  IfCommand.h  Lexer.cpp  Lexer.h  OpenServerCommand.cpp  OpenServerCommand.h  Parser.cpp  Parser.h  PrintCommand.cpp  PrintCommand.h  ProgVar.cpp  ProgVar.h  PutCommand.cpp  PutCommand.h  README.md  ServerSymbolTable.cpp  ServerSymbolTable.h  SingletonObj.cpp  SingletonObj.h  SleepCommand.cpp  SleepCommand.h  SymbolTable.cpp  SymbolTable.h  (+10 more)
